fix user-select issues on iphone

--- a/chatServer/public/css/style.css
+++ b/chatServer/public/css/style.css
@@ -1,10 +1,10 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -webkit-user-select: initial;
+     -moz-user-select: initial;
+      -ms-user-select: initial;
+          user-select: initial;
   margin: 0;
   padding: 0;
 }
